# wacli

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  README.md  wac.md  wit.md
.github/workflows/: ci.yml  release.yml
cli/: README.md
cli/allowlist/: wasi-imports-0.3.0-rc-2026-01-06.txt
cli/components/core/: moon.mod.json
cli/components/core/wit/: world.wit
cli/components/host/: moon.mod.json
cli/components/host/wit/: world.wit
cli/example/: tool.toml
cli/tools/: fw-cli-check-imports  fw-cli-compose  fw-cli-gen-registry
cli/wit/: fw-cli-runner.wit  fw-cli.wit  wacli-runner.wit  wacli.wit
components/: core.component.wasm  host.component.wasm
components/core/: Cargo.toml
components/core/src/: bindings.rs  lib.rs
components/core/wit/: world.wit
components/host/: Cargo.toml
components/host/src/: bindings.rs  lib.rs
components/host/wit/: world.wit
crates/cli/: Cargo.toml
crates/cli/src/: check.rs  command_metadata.rs  component_scan.rs  lock.rs  main.rs  manifest.rs  registry_gen.rs  registry_gen_wat.rs  registry_pull.rs  registry_template.wat  wac_gen.rs  wasm_registry.rs  wit.rs
crates/cli/tests/: cli_integration.rs
crates/cli/wit/: command.wit
crates/molt-registry-client/: Cargo.toml
crates/molt-registry-client/src/: lib.rs  media_types.rs  oci.rs  util.rs  wasm_v1.rs
crates/plugin-loader/: Cargo.toml
crates/plugin-loader/src/: lib.rs
crates/plugin-loader/src/bindings/: README.md  pipe_plugin.rs  pipe_runtime_host.rs
crates/plugin-loader/wit/cli/: host-env.wit  host-process.wit  pipe.wit  registry.wit  wacli.wit  wasi-deps.wit
crates/wacli-argparse/: Cargo.toml
crates/wacli-argparse/src/: lib.rs
crates/wacli-cdk/: Cargo.toml  README.md
crates/wacli-cdk-macros/: Cargo.toml
crates/wacli-cdk-macros/src/: lib.rs
crates/wacli-cdk/src/: bindings.rs  lib.rs
crates/wacli-metadata/: Cargo.toml
crates/wacli-metadata/src/: lib.rs
dbtx/: command.wit  compose.wac  world.wit
docs/: wacli-phase2-plan.md
examples/hello/: compose.wac  wacli.toml
examples/hello/plugins/greeter/: moon.mod.json
examples/hello/plugins/greeter/wit/: world.wit
examples/hello/registry/: moon.mod.json
examples/hello/registry/wit/: world.wit
scripts/: build_components.sh  gen_plugin_loader_bindings.sh  gen_wasm_oci_config.py  publish_if_tag.sh  resolve_crate_version.sh
src/: manifest.rs
test-build/: README.md  wacli.json
test-build/commands/fileio/: Cargo.toml
test-build/commands/fileio/src/: lib.rs
test-build/commands/greet/: Cargo.toml
test-build/commands/greet/src/: lib.rs
test-build/commands/hello/: moon.mod.json
test-build/commands/hello/cmd/main/: moon.pkg.json
test-build/commands/need/: Cargo.toml
test-build/commands/need/src/: lib.rs
test-build/commands/show/: Cargo.toml
test-build/commands/show/src/: lib.rs
test-build/plugin-src/show/format/table/: Cargo.toml
test-build/plugin-src/show/format/table/src/: lib.rs
test-build/registry/: README.mbt.md  moon.mod.json
test-build/registry/cmd/main/: moon.pkg.json
test-build/wit/: registry-hello.wit  types-only.wit
testdata/: README.md  greet.component.wasm
tools/wacli/src/: check.rs  main.rs  wac_gen.rs
wit/: registry.wit  wacli-runner.wit  wacli.wit
wit/cli/: command.wit  host-env.wit  host-fs.wit  host-io.wit  host-pipes.wit  host-process.wit  host.wit  pipe-runtime.wit  pipe.wit  registry-schema.wit  registry.wit  schema.wit  types.wit  wacli.wit  wasi-deps.wit
wit/runner/: wacli-runner.wit
