[package]
name = "wacli"
version = "0.1.0"
edition = "2024"
rust-version = "1.92"
description = "WebAssembly Component composition CLI"
license = "Apache-2.0"

[[bin]]
name = "wacli"
path = "src/main.rs"

[dependencies]
# WAC crates for composition
wac-parser = { version = "0.9.0-dev", default-features = false }
wac-resolver = { version = "0.9.0-dev", default-features = false, features = ["wit"] }
wac-graph = "0.9.0-dev"
wac-types = "0.9.0-dev"

# CLI and error handling
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"

# Async runtime
tokio = { version = "1.45", features = ["macros", "rt-multi-thread"] }

# Manifest parsing
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# WASM parsing (for import checking)
wasmparser = "0.244"

# Utilities
indexmap = "2.2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[profile.release]
lto = true
strip = true
opt-level = "z"
