[workspace]
resolver = "3"
members = ["crates/*", "components/host", "components/core"]

[workspace.package]
version = "0.0.39"
edition = "2024"
rust-version = "1.92"
license = "Apache-2.0"

[workspace.dependencies]
# WAC crates for composition
wac-parser = { version = "0.9.0", default-features = false }
wac-resolver = { version = "0.9.0", default-features = false, features = ["wit"] }
wac-graph = "0.9.0"
wac-types = "0.9.0"

# Workspace crates
plugin-loader = { path = "crates/plugin-loader", version = "0.0.39" }
molt-registry-client = { path = "crates/molt-registry-client", version = "0.0.39" }

# CLI and error handling
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenvy = "0.15"
base64 = "0.22"
oci-client = { version = "0.16.0", default-features = false, features = ["rustls-tls"] }
reqwest = { version = "0.13", default-features = false, features = ["rustls", "json"] }
url = "2.5"
futures-util = "0.3"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

# WASM parsing and encoding
wasmparser = "0.244"
wasm-encoder = "0.244"
wat = "1.244"
wit-bindgen = { version = "0.52", default-features = false, features = ["realloc", "async"] }
wit-component = "0.244"
wit-parser = "0.244"
wasmtime = { version = "41", features = ["component-model"] }
wasmtime-wasi = { version = "41" }
semver = "1.0"

# Utilities
indexmap = "2.2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
ureq = "2.12"
self_update = { version = "0.42", default-features = false, features = ["archive-zip", "compression-zip-deflate", "rustls"] }

[profile.release]
lto = true
strip = true
opt-level = "z"
