[package]
name = "wacli"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "WebAssembly Component composition CLI"

[[bin]]
name = "wacli"
path = "src/main.rs"

[dependencies]
wac-parser.workspace = true
wac-resolver.workspace = true
wac-graph.workspace = true
wac-types.workspace = true
clap.workspace = true
anyhow.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
wasmparser.workspace = true
indexmap.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
