[package]
name = "wacli"
version = "0.0.3"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "WebAssembly Component composition CLI"
repository = "https://github.com/RAKUDEJI/wacli"
keywords = ["wasm", "webassembly", "component", "cli", "wac"]
categories = ["command-line-utilities", "wasm"]

[[bin]]
name = "wacli"
path = "src/main.rs"

[dependencies]
wac-parser.workspace = true
wac-resolver.workspace = true
wac-graph.workspace = true
wac-types.workspace = true
clap.workspace = true
anyhow.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
wasmparser.workspace = true
indexmap.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
