[package]
name = "wacli"
version = "0.0.12"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "WebAssembly Component composition CLI"
repository = "https://github.com/RAKUDEJI/wacli"
keywords = ["wasm", "webassembly", "component", "cli", "wac"]
categories = ["command-line-utilities", "wasm"]

[[bin]]
name = "wacli"
path = "src/main.rs"

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/wacli-{ target }{ binary-ext }"
bin-dir = "wacli-{ target }{ binary-ext }"
pkg-fmt = "bin"

[package.metadata.binstall.overrides.x86_64-unknown-linux-gnu]
pkg-url = "{ repo }/releases/download/v{ version }/wacli-linux-x86_64"

[package.metadata.binstall.overrides.aarch64-unknown-linux-gnu]
pkg-url = "{ repo }/releases/download/v{ version }/wacli-linux-aarch64"

[package.metadata.binstall.overrides.x86_64-apple-darwin]
pkg-url = "{ repo }/releases/download/v{ version }/wacli-macos-x86_64"

[package.metadata.binstall.overrides.aarch64-apple-darwin]
pkg-url = "{ repo }/releases/download/v{ version }/wacli-macos-aarch64"

[package.metadata.binstall.overrides.x86_64-pc-windows-msvc]
pkg-url = "{ repo }/releases/download/v{ version }/wacli-windows-x86_64.exe"

[dependencies]
wac-parser.workspace = true
wac-resolver.workspace = true
wac-graph.workspace = true
wac-types.workspace = true
clap.workspace = true
anyhow.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
wasmparser.workspace = true
wasm-encoder.workspace = true
wat.workspace = true
wit-component.workspace = true
wit-parser.workspace = true
indexmap.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
