[package]
name = "plugin-loader"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Dynamic pipe loader for wacli"
repository = "https://github.com/RAKUDEJI/wacli"

[dependencies]
anyhow.workspace = true
wasmtime.workspace = true
wasmtime-wasi.workspace = true
