[package]
name = "plugin-loader"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Dynamic pipe loader for wacli"
repository = "https://github.com/RAKUDEJI/wacli"

[dependencies]
anyhow.workspace = true
wasmtime.workspace = true
wasmtime-wasi.workspace = true
