[package]
name = "wacli-argparse"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Minimal clap-like argument parsing and help rendering for wacli"
repository = "https://github.com/RAKUDEJI/wacli"
keywords = ["wasm", "webassembly", "component", "cli"]
categories = ["command-line-utilities", "wasm"]

[lib]
name = "wacli_argparse"
path = "src/lib.rs"

[dependencies]

